--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "api.py",
+      "src": "app.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
-      "src": "/check",
-      "dest": "api.py"
+      "src": "/(.*)",
+      "dest": "app.py"
     }
   ]
 }
